/*
 * $Id: ChangeLog,v 1.2036 2004/01/11 17:59:32 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-01-12 09:35 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/persist.prg
   + ::LoadFromText() - fix to work with Version 1 saved data

2004-01-11 13:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * include/hbgtwvt.h
    * move CINTERFACE decl for proper msvc c++ mode handling.

2004-01-11 20:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/gtwvt/gtwvt.c
    ! remove unwanted ; in line 3721

  * source/compiler/genc.c
  * source/vm/extend.c
  * source/vm/arrays.c
  * source/rtl/readline.c
  * source/rtl/hbrandom.c
  * source/rtl/hbsrlraw.c
  * source/rtl/bkgtsks.c
  * source/rdd/dbf1.c
  * contrib/rdd_ads/ads1.c
    * code clean-up (mostly removal of unused variables) and castings

2004-01-10 23:31 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed getExpReal() to not be greedy when matching Extended Marker (Clipper compatibility)

2004-01-10 16:40 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  * utils/hbmake/hbmake.prg
     ! minor fix on linux compilation

2004-01-10 16:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * xharbour/source/rtl/gtwvt/gtwvt.c
     + static void hb_wvt_gtCreateCaret()
     + static void hb_wvt_gtKillCaret
       The above functions are called in hb_wvt_gtSetFont() instead of
       SendMessage( _s.hWnd, WM_KILLFOCUS, 0, 0 ) and
       SendMessage( _s.hWnd, WM_SETFOCUS, 0, 0 )
       because these messages were generating the recursive calls.

     + Callback functions for Window messages WM_SETFOCUS and WM_KILLFOCUS are
       activated as Wvt_SetFocus() and Wvt_KillFocus() at the PRG level.

     ! Wvt_DrawBoxRaised(), Wvt_DrawBoxRecessed()
       Fixed right-bottom corner values.

   * xharbour/include/hbgtwvt.h